--- a/style.css
+++ b/style.css
@@ -1,42 +1,37 @@
 /* Raleway 폰트 추가 */
 @import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
 
+body {
+    font-family: 'Raleway', sans-serif;
+}
 .container,
 .name-button,
 .description,
 .list,
 .bottom-box {
-    font-family: 'Raleway', sans-serif;
     /* 나머지 스타일 속성들을 그대로 유지합니다. */
+}
+
+main {
+    display: flex;
 }
 
 .container {
     display: flex;
-    width: 100%;
-    margin-bottom: 100px;
-
+    flex-direction: column;
 }
 
 .left-side {
     width: 30%;
-    /* Section 1 비율 3 */
     background-color: lightgray;
     padding: 20px;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    overflow: auto;
 }
 
 .right-side {
-    width: 70%;
+    flex: 1;
     /* Section 2 비율 7 */
     background-color: gray;
     padding: 20px;
-    margin-left: 30%;
     /* 수정된 비율에 맞게 조정 */
     padding-top: 80px;
     height: 80%;
@@ -44,7 +39,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: right;
     padding-left: 30px;
     padding-right: 30px;
     /* 여백 추가 */
@@ -76,6 +70,7 @@
 }
 
 .list {
+    position: relative;
     margin-top: 35px;
     list-style-type: disc;
 }
@@ -89,7 +84,7 @@
 }
 
 .bottom-box {
-    width: 40%;
+    flex: 1;
     padding: 10px;
     background-color: lightgray;
     text-align: left;
@@ -98,7 +93,7 @@
 }
 
 .img-box {
-    width: 60%;
+    width: 51.3%;
     padding: 10px;
     background-color: lightgray;
     text-align: left;
@@ -106,8 +101,14 @@
     margin-left: 50px;
 }
 
-.img-box {
-
+.time-box {
+    padding: 10px;
+    background-color: lightgray;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 50px;
+    width: 20%;
+    text-align: right;
 }
 
 .bottom-box:nth-child(3) {
@@ -141,16 +142,9 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    /* 항목 사이 여백 조절 (선택 사항) */
-}
-
-.list-item img {
-    width: 30px;
-    /* 이미지 너비 조절 (선택 사항) */
+    padding-left: 40px;
     height: 30px;
-    /* 이미지 높이 조절 (선택 사항) */
-    margin-right: 10px;
-    /* 이미지와 텍스트 사이 여백 조절 (선택 사항) */
+    /* 항목 사이 여백 조절 (선택 사항) */
 }
 
 .list-item span {
@@ -160,14 +154,26 @@
     /* 텍스트 색상 조절 (선택 사항) */
 }
 
-
 .flex-row {
     display: flex;
     justify-content: space-between;
 }
 
-
 .spin {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    transition: top 0.3s ease;
+}
+.spin-bottom {
+    vertical-align: middle;
+    margin-left: 10px;
+    width: 75px;
+    height: auto;
+    margin: auto;
+}
+.spin-animate {
     animation: rotateZ 2s linear infinite;
 }
 
@@ -180,3 +186,9 @@
 		transform: rotateZ(360deg);
 	}
 }
+
+.sticky {
+    position: sticky;
+    top: 20px;
+}
+
